Added POC Forcast section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,58 @@
                   <div class="weather-app-temp-unit">°C</div>
                </div>
             </div>
+            <div class="weather-forcast">
+               <div class="weather-forcast-day">
+                  <div class="weather-forcast-date">Tue</div>
+                  <div class="weather-forcast-icon">🌞</div>
+                  <div class="weather-forcast-temps">
+                     <div class="weather-forcast-temper">
+                        <strong>15°C </strong>
+                     </div>
+                     <div class="weather-forcast-temper">9°C</div>
+                  </div>
+               </div>
+               <div class="weather-forcast-day">
+                  <div class="weather-forcast-date">Wed</div>
+                  <div class="weather-forcast-icon">🌞</div>
+                  <div class="weather-forcast-temps">
+                     <div class="weather-forcast-temper">
+                        <strong>15°C </strong>
+                     </div>
+                     <div class="weather-forcast-temper">9°C</div>
+                  </div>
+               </div>
+               <div class="weather-forcast-day">
+                  <div class="weather-forcast-date">Thu</div>
+                  <div class="weather-forcast-icon">🌞</div>
+                  <div class="weather-forcast-temps">
+                     <div class="weather-forcast-temper">
+                        <strong>15°C </strong>
+                     </div>
+                     <div class="weather-forcast-temper">9°C</div>
+                  </div>
+               </div>
+               <div class="weather-forcast-day">
+                  <div class="weather-forcast-date">Fri</div>
+                  <div class="weather-forcast-icon">🌞</div>
+                  <div class="weather-forcast-temps">
+                     <div class="weather-forcast-temper">
+                        <strong>15°C </strong>
+                     </div>
+                     <div class="weather-forcast-temper">9°C</div>
+                  </div>
+               </div>
+               <div class="weather-forcast-day">
+                  <div class="weather-forcast-date">Tue</div>
+                  <div class="weather-forcast-icon">🌞</div>
+                  <div class="weather-forcast-temps">
+                     <div class="weather-forcast-temper">
+                        <strong>15°C </strong>
+                     </div>
+                     <div class="weather-forcast-temper">9°C</div>
+                  </div>
+               </div>
+            </div>
          </main>
 
          <footer>
