--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                >
                and hosted on
                <a
-                  href="https://https://weather-app-final-project.pages.dev/"
+                  href="https://weather-app-final-project.pages.dev/"
                   target="_blank"
                   rel="noopener"
                   >Cloudflare Pages</a
